--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.5.1",
+    "@progress/kendo-react-popup": "^5.1.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.1.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
